# Athenas

./: .gitignore  Apr  6 19h40.svgz  Dual.kra  Maps.svgz  README.md  Readme.md  SpiralMatrix.svgz  minspanningtree.graphml  montecarlo.lyx  montecarlo.lyx~  notes.kra  numeros.graphml
C_CPP_Proyects/: BubbleSort.cpp  EntrevistaTest1.cpp  EntrevistaTest2.cpp  Program.exe.stackdump  a.exe.stackdump  a.out  cmake_notes  dummy.cpp  main.cpp  makefile  randomquiz  redblack  select_random_string.c
C_CPP_Proyects/APPS/: a.out  labyrinth.cpp  test.cpp
C_CPP_Proyects/Arrays/: MagicSquare.cpp  a.out  maxDistance.cpp  repeat.cpp
C_CPP_Proyects/Breath_and_deep_search/: Coins.cpp
C_CPP_Proyects/Classes/: Constatinopla.cpp  ReviewClasses.cpp  Uber  Uber.cpp  Virtual.cpp  a.out  class_derived.cpp  complex_overloade.cpp  heritage.cpp  zoo.cpp
C_CPP_Proyects/Cointainers/: Hash_Dario.cpp  Hash_DarioHeader.h  LuisHash  LuisHash.cpp  Matrix_hash.cpp  Matrix_hash.h  (+4 more)
C_CPP_Proyects/Math/: CMakeLists.txt  a.out  lagrange.cpp  math  math_example.c
C_CPP_Proyects/Math/Interpolation/: CMakeLists.txt
C_CPP_Proyects/Math/Interpolation/include/: lagrange.h
C_CPP_Proyects/Math/Interpolation/src/: CMakeLists.txt
C_CPP_Proyects/Math/Recursion/: Recursion  Recursion.cpp
C_CPP_Proyects/Math/pi/: a.out  basilea.cpp  monetacarlo.cpp  poligonos.cpp
C_CPP_Proyects/Math/src/: CMakeLists.txt  Lagrange  lagrange.cpp  muestras.xlsx
Diagrams/: Distance.graphml  GenericSortOverview.graphml
Notes/: Solucion problemas.svgz
Python_Proyects/: ProbabilityTree.py
papers/: Athenas_18_OCT.kra
(+238 files in other folders)
